Corrected search results screen. The table now displays correctly, files are now visible and are highlighted correcty when selected. General look and feel of search results improved.

--- a/src/scss/modules/_close-button.scss
+++ b/src/scss/modules/_close-button.scss
@@ -9,6 +9,10 @@
     right: 0;
     width: 45px;
     height: $panel-header-height;
+
+    .search-wrap & {
+        right: 37px;
+    }
 }
 
 // .close-button {
