--- a/src/scss/modules/_search.scss
+++ b/src/scss/modules/_search.scss
@@ -142,11 +142,15 @@
         }
 
     .search-results-wrap {
-        position: relative;
-        top: 0;
-        width: 80%;
-        height: 100%;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        right: 100px;
+        bottom: 30px;
+        // width: 80%;
+        // height: 100%;
         margin: 0 auto;
+        border: 1px solid $alto;
     }
 
 
